--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Compilled/web/index.html"
+export_path="../Exports/GGJ2025/web/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
